// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Prepare azd-based Azure projects for deployment: generates azure.yaml, infrastructure (Bicep/Terraform), and Dockerfiles for the Azure Developer CLI (azd) workflow. USE ONLY when the user explicitly wants to use azd as the deployment tool, or the project already has an azure.yaml file. DO NOT USE FOR: non-azd deployments, copilot-sdk apps (use azure-hosted-copilot-sdk), Python App Service code-only deploys (use python-appservice-deploy), or cross-cloud migration (use azure-cloud-migrate). WHEN: prepare app for azd, create azure.yaml, set up azd infrastructure, modernize app for Azure with azd, deploy with azd, function app, timer trigger, service bus trigger, event-driven function, managed identity, generate Bicep, generate Terraform, create and deploy to Azure.",
  "extractedKeywords": [
    "already",
    "app service",
    "apps",
    "authentication",
    "azd-based",
    "azure",
    "azure-cloud-migrate",
    "azure-hosted-copilot-sdk",
    "bicep",
    "cli",
    "code-only",
    "container",
    "copilot-sdk",
    "create",
    "cross-cloud",
    "deploy",
    "deployment",
    "deployments",
    "deploys",
    "developer",
    "dockerfiles",
    "entra",
    "event-driven",
    "explicitly",
    "file",
    "function",
    "generate",
    "generates",
    "identity",
    "infrastructure",
    "managed",
    "migration",
    "modernize",
    "non-azd",
    "only",
    "prepare",
    "project",
    "projects",
    "python",
    "python-appservice-deploy",
    "security",
    "service",
    "sql",
    "terraform",
    "timer",
    "tool",
    "trigger",
    "user",
    "validation",
    "wants",
    "when",
    "with",
    "workflow",
    "yaml",
  ],
  "name": "azure-prepare",
}
`;

exports[`azure-prepare - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "already",
  "app service",
  "apps",
  "authentication",
  "azd-based",
  "azure",
  "azure-cloud-migrate",
  "azure-hosted-copilot-sdk",
  "bicep",
  "cli",
  "code-only",
  "container",
  "copilot-sdk",
  "create",
  "cross-cloud",
  "deploy",
  "deployment",
  "deployments",
  "deploys",
  "developer",
  "dockerfiles",
  "entra",
  "event-driven",
  "explicitly",
  "file",
  "function",
  "generate",
  "generates",
  "identity",
  "infrastructure",
  "managed",
  "migration",
  "modernize",
  "non-azd",
  "only",
  "prepare",
  "project",
  "projects",
  "python",
  "python-appservice-deploy",
  "security",
  "service",
  "sql",
  "terraform",
  "timer",
  "tool",
  "trigger",
  "user",
  "validation",
  "wants",
  "when",
  "with",
  "workflow",
  "yaml",
]
`;
